# Computer-Graphics

./: 000arrays.c  000functionPointers.c  000functions.c  000helloWorld.c  000ifWhileFor.c  000intsDoubles.c  000linking.c  000matrices2By2.c  000pixel.h  000pointers.c  000structs.c  010mainPainting.c  020mainRasterizing.c  020triangle.c  030mainInterpolating.c  030mainTest.c  030matrix.c  030triangle.c  030vector.c  031mainInterpolating.c  031triangle.c  040mainInterpolating.c  040texture.c  040triangle.c  041mainInterpolating.c  042mainInterpolating.c  050mainAbstracted.c  050shading.c  050triangle.c  060mainEffect.c  070mainMesh.c  070mesh.c  080mainPosable.c  080mesh.c  080shading.c  080triangle.c  090mesh.c  090triangle.c  100mainHomogeneous.c  100matrix.c  (+112 more)
